--- a/templates/new_door/property_overview.html
+++ b/templates/new_door/property_overview.html
@@ -88,30 +88,30 @@
       </div>
     </div>
     <div class="card">
-      <div
-        class="card-header card-header-icon"
-        
-      >
-        <div class="card-icon"style="padding: 0.8em 0; font-size: 1rem; background: rgb(224, 79, 115)">
-          <a
-            href=""
-            class="card-header card-header-text"
-            style="font-size: 20px"
-          >
-            <i class="material-icons">roofing</i> {{ entity }}
+      <div class="d-flex justify-content-between align-items-center">
+        <div class="card-header card-header-rose">
+          <a href=" {% url 'entity_overview'%} " class="text-white" style="font-size: 20px">
+            <i class="material-icons">person</i> Propery Overview
           </a>
         </div>
-        <div
-          class="card-icon float-right"
-          style="
-            padding: 0.5em 0;
-            font-size: 1rem;
-            background: rgb(224, 79, 115);
-          "
-        >
+        <div style="font-size: 0.7rem; margin-top: -35px">
           <a
-            href=" {% url 'add_property' entity.entity_name %} "
-            class="card-header card-header-rose card-header-text"
+            href="{% url 'export' request.user.pk %} "
+            class="card-header card-header-warning p-2"
+          >
+            <i class="material-icons">add</i>Export PDF
+          </a>
+
+          <a
+            href=" {% url 'add_entity'%} "
+            class="card-header card-header-rose p-2"
+          >
+            <i class="material-icons">add</i>Export CSV
+          </a>
+
+          <a
+            href=" {% url 'add_property' entity %} "
+            class="card-header card-header-success p-2"
           >
             <i class="material-icons">add</i>Add Property
           </a>
