added part autho

--- a/templates/new_door/property_overview.html
+++ b/templates/new_door/property_overview.html
@@ -96,7 +96,7 @@
         </div>
         <div style="font-size: 0.7rem; margin-top: -35px">
           <a
-            href="{% url 'export' request.user.pk %} "
+            href="{% url 'export_property' request.user.pk %} "
             class="card-header card-header-warning p-2"
           >
             <i class="material-icons">add</i>Export PDF
