--- a/templates/report/test.html
+++ b/templates/report/test.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" type="text/css" href="{% static 'css/reports.css' %}">
   <style>
   </style>
-  <title>Document</title>
+  <title>Property Unit Report</title>
 </head>
 <body>
   <header>
