--- a/templates/new_door/property_overview.html
+++ b/templates/new_door/property_overview.html
@@ -103,7 +103,7 @@
           </a>
 
           <a
-            href=" {% url 'add_entity'%} "
+            href=" {% url 'export_property_csv' request.user.pk %} "
             class="card-header card-header-rose p-2"
           >
             <i class="material-icons">add</i>Export CSV
