--- a/templates/new_door/entity_overview.html
+++ b/templates/new_door/entity_overview.html
@@ -27,7 +27,7 @@
           </a>
 
           <a
-            href=" {% url 'add_entity'%} "
+            href=" {% url 'export_csv' request.user.pk %} "
             class="card-header card-header-rose p-2"
           >
             <i class="material-icons">add</i>Export CSV
