--- a/templates/new_door/property_all_overview.html
+++ b/templates/new_door/property_all_overview.html
@@ -99,14 +99,14 @@ Property Overview {% endblock title %} {% block body %}
         </div>
         <div style="font-size: 0.7rem; margin-top: -35px">
           <a
-            href="{% url 'export' request.user.pk %} "
+            href="{% url 'export_property' request.user.pk %}"
             class="card-header card-header-warning p-2"
           >
             <i class="material-icons">add</i>Export PDF
           </a>
 
           <a
-            href=" {% url 'add_entity'%} "
+            href=" {% url 'export_property_csv' request.user.pk %} "
             class="card-header card-header-rose p-2"
           >
             <i class="material-icons">add</i>Export CSV
