--- a/templates/new_door/property_unit_overview.html
+++ b/templates/new_door/property_unit_overview.html
@@ -93,24 +93,35 @@
   
   <div class="card mt-5">
     <div class="card-header card-header-primary card-header-icon">
-      <div class="card-icon" style="padding:.8em 0; font-size: 1rem; background: rgb(126, 32, 214);">
-        <a
-          href=" {% url 'property_overview' property.entity.entity_name %} "
-          class="card-header card-header-rose card-header-text"
-          style="font-size: 20px"
-        >
-          <i class="material-icons">house</i> {{ property.property_name.upper }}
-        </a>
-      </div>
-       <div class="card-icon float-right" style="padding:.5em 0; font-size: 1rem; background: rgb(126, 32, 214);">
+      <div class="d-flex justify-content-between align-items-center">
+        <div class="card-header card-header-rose">
+          <a href="{% url 'property_overview' property.entity.entity_name %}  " class="text-white" style="font-size: 20px">
+            <i class="material-icons">house</i> {{ property.property_name.upper }}
+          </a>
+        </div>
+        <div style="font-size: 0.7rem; margin-top: -35px">
           <a
-            href=" {% url 'prepopulated_field_unit' property.id  %} "
-            class="card-header card-header-rose card-header-text"
+            href="{% url 'export_property' request.user.pk %} "
+            class="card-header card-header-warning p-2"
+          >
+            <i class="material-icons">add</i>Export PDF
+          </a>
+
+          <a
+            href=" {% url 'export_property_csv' request.user.pk %} "
+            class="card-header card-header-rose p-2"
+          >
+            <i class="material-icons">add</i>Export CSV
+          </a>
+
+          <a
+            href="{% url 'prepopulated_field_unit' property.id  %}"
+            class="card-header card-header-success p-2"
           >
             <i class="material-icons">add</i>Add Unit
           </a>
-         
         </div>
+      </div>
     </div>
     <div class="card-body">
       <div class="material-datatables">
@@ -143,7 +154,7 @@
               {% if unit.occupancy_type.occupancy_type.lower == 'vacant' %}
               <a
                 href="{% url 'add_tenant_to_unit' unit.pk %}"
-                class="btn btn-primary btn-round occupancy_type"
+                class="btn btn-sm btn-primary btn-round occupancy_type"
               >
                 {{ unit.occupancy_type.occupancy_type }}
               </a>
@@ -153,13 +164,13 @@
 
               <a
                 href="{% url 'verify_documents' unit.tenantcontract.tenant.user.username %}"
-                class="btn btn-primary btn-round occupancy_type"
+                class="btn btn-sm btn-primary btn-round occupancy_type"
               >
                 {{ unit.occupancy_type.occupancy_type }}
               </a>
               {% else %}
               <button
-                class="btn btn-primary btn-round occupancy_type"
+                class="btn btn-sm btn-primary btn-round occupancy_type"
                 disabled
               >
                 {{ unit.occupancy_type.occupancy_type }}
@@ -167,13 +178,13 @@
               {% endif %} {% elif unit.occupancy_type.occupancy_type.lower == 'create contract' %}
               <a
                 href="{% url 'add_tetant_contract' unit.tenantcontract.tenant.user.username %}"
-                class="btn btn-primary btn-round occupancy_type"
+                class="btn btn-sm btn-primary btn-round occupancy_type"
               >
                 {{ unit.occupancy_type.occupancy_type }}
               </a>
               {% else %}
               <button
-                class="btn btn-primary btn-round occupancy_type"
+                class="btn btn-sm btn-primary btn-round occupancy_type"
                 disabled
               >
                 {{ unit.occupancy_type.occupancy_type }}
@@ -205,9 +216,7 @@
                 <i
                   class="material-icons"
                   style="
-                    margin-right: 5px;
-                    margin-top: 10px;
-                    margin-bottom: 20px;
+                 
                     color: #f44336;
                   "
                   >autorenew</i
@@ -219,9 +228,7 @@
                 <i
                   class="material-icons"
                   style="
-                    margin-right: 5px;
-                    margin-top: 10px;
-                    margin-bottom: 20px;
+               
                     color: #6663ff;
                   "
                   >construction</i
@@ -232,17 +239,14 @@
               <a
                 href="{% url 'view_unit' unit.pk  %}"
                 class="d-inline"
-                rel="tooltip "
-                title="View unit"
                 rel="tooltip"
+                title="View unit"
               >
                 <div class="ripple-container success"></div>
                 <i
                   class="material-icons"
                   style="
-                    margin-right: 10px;
-                    margin-top: 10px;
-                    margin-bottom: 20px;
+     
                     color: #ff9800;
                   "
                   >dvr</i
@@ -259,9 +263,7 @@
                 <i
                   class="material-icons"
                   style="
-                    margin-right: 5px;
-                    margin-top: 10px;
-                    margin-bottom: 20px;
+                
                     color: #4caf50;
                   "
                   >create</i
@@ -278,9 +280,7 @@
                 <i
                   class="material-icons"
                   style="
-                    margin-right: 5px;
-                    margin-top: 10px;
-                    margin-bottom: 20px;
+            
                     color: #0e352b;
                   "
                   >description</i
@@ -302,9 +302,7 @@
                   <i
                     class="material-icons"
                     style="
-                      margin-right: 5px;
-                      margin-top: 10px;
-                      margin-bottom: 20px;
+                   
                       color: #c55d55;
                     "
                     >delete</i
