--- a/templates/report/property_report.html
+++ b/templates/report/property_report.html
@@ -46,7 +46,7 @@
           {% for property in properties %}
             <tr>
               <td>{{ property.pk }}</td>
-              <td>{{ property.address1 }}, {{ property.city }}, {{ property.get_country_display }}</td>
+              <td>{{ property.address1 }}</td>
               <td>{{ property.contact_no  }}</td>
               <td>{{ property.email }}</td>
             </tr>
