--- a/templates/report/index.html
+++ b/templates/report/index.html
@@ -25,7 +25,7 @@
             >
           </span>
 
-          <a href=" {% url 'oveview_report' %} " class="view btn btn-primary btn-sm btn-block">
+          <a href=" {% url 'entity_overview' %} " class="view btn btn-primary btn-sm btn-block">
             View All Report
           </a>
         </div>
@@ -54,7 +54,7 @@
             >
           </span>
 
-          <a href="{% url 'property_unit_report' %}" class="view btn btn-primary btn-sm btn-block">
+          <a href="{% url 'property_all_overview' %}" class="view btn btn-primary btn-sm btn-block">
             View All Report
           </a>
         </div>
@@ -83,7 +83,7 @@
             >
           </span>
 
-          <a href="{% url 'oveview_report' %}" class="view btn btn-primary btn-sm btn-block">
+          <a href="{% url 'unit_overview' %}" class="view btn btn-primary btn-sm btn-block">
             View All Report
           </a>
         </div>
